parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COLON

Grammar

Rule 0     S' -> program
Rule 1     program -> stmt_list
Rule 2     stmt_list -> <empty>
Rule 3     stmt_list -> stmt_list statement
Rule 4     statement -> simple_stmt SEMICOLON
Rule 5     statement -> block_stmt
Rule 6     simple_stmt -> expression
Rule 7     simple_stmt -> IDENT ASSIGN expression
Rule 8     simple_stmt -> RETURN expression
Rule 9     simple_stmt -> RETURN
Rule 10    simple_stmt -> PASS
Rule 11    simple_stmt -> PRINT LPAREN arg_list_opt RPAREN
Rule 12    block_stmt -> IF LPAREN expression RPAREN block
Rule 13    block_stmt -> IF LPAREN expression RPAREN block ELSE block
Rule 14    block_stmt -> WHILE LPAREN expression RPAREN block
Rule 15    block_stmt -> FOR LPAREN IDENT IN expression RPAREN block
Rule 16    block_stmt -> DEF IDENT LPAREN param_list_opt RPAREN block
Rule 17    param_list_opt -> <empty>
Rule 18    param_list_opt -> param_list
Rule 19    param_list -> IDENT
Rule 20    param_list -> param_list COMMA IDENT
Rule 21    block -> LBRACE stmt_list RBRACE
Rule 22    expression -> or_expr
Rule 23    or_expr -> or_expr OR and_expr
Rule 24    or_expr -> and_expr
Rule 25    and_expr -> and_expr AND not_expr
Rule 26    and_expr -> not_expr
Rule 27    not_expr -> NOT not_expr
Rule 28    not_expr -> comparison
Rule 29    comparison -> arith_expr EQ arith_expr
Rule 30    comparison -> arith_expr NEQ arith_expr
Rule 31    comparison -> arith_expr LT arith_expr
Rule 32    comparison -> arith_expr GT arith_expr
Rule 33    comparison -> arith_expr LE arith_expr
Rule 34    comparison -> arith_expr GE arith_expr
Rule 35    comparison -> arith_expr
Rule 36    arith_expr -> arith_expr PLUS term
Rule 37    arith_expr -> arith_expr MINUS term
Rule 38    arith_expr -> term
Rule 39    term -> term TIMES factor
Rule 40    term -> term DIVIDE factor
Rule 41    term -> term MOD factor
Rule 42    term -> factor
Rule 43    factor -> PLUS factor
Rule 44    factor -> MINUS factor
Rule 45    factor -> atom
Rule 46    atom -> LPAREN expression RPAREN
Rule 47    atom -> INT
Rule 48    atom -> FLOAT
Rule 49    atom -> STRING
Rule 50    atom -> TRUE
Rule 51    atom -> FALSE
Rule 52    atom -> NONE
Rule 53    atom -> IDENT
Rule 54    atom -> IDENT LPAREN arg_list_opt RPAREN
Rule 55    arg_list_opt -> <empty>
Rule 56    arg_list_opt -> arg_list
Rule 57    arg_list -> expression
Rule 58    arg_list -> arg_list COMMA expression
Rule 59    atom -> LBRACKET arg_list_opt RBRACKET

Terminals, with rules where they appear

AND                  : 25
ASSIGN               : 7
COLON                : 
COMMA                : 20 58
DEF                  : 16
DIVIDE               : 40
ELSE                 : 13
EQ                   : 29
FALSE                : 51
FLOAT                : 48
FOR                  : 15
GE                   : 34
GT                   : 32
IDENT                : 7 15 16 19 20 53 54
IF                   : 12 13
IN                   : 15
INT                  : 47
LBRACE               : 21
LBRACKET             : 59
LE                   : 33
LPAREN               : 11 12 13 14 15 16 46 54
LT                   : 31
MINUS                : 37 44
MOD                  : 41
NEQ                  : 30
NONE                 : 52
NOT                  : 27
OR                   : 23
PASS                 : 10
PLUS                 : 36 43
PRINT                : 11
RBRACE               : 21
RBRACKET             : 59
RETURN               : 8 9
RPAREN               : 11 12 13 14 15 16 46 54
SEMICOLON            : 4
STRING               : 49
TIMES                : 39
TRUE                 : 50
WHILE                : 14
error                : 

Nonterminals, with rules where they appear

and_expr             : 23 24 25
arg_list             : 56 58
arg_list_opt         : 11 54 59
arith_expr           : 29 29 30 30 31 31 32 32 33 33 34 34 35 36 37
atom                 : 45
block                : 12 13 13 14 15 16
block_stmt           : 5
comparison           : 28
expression           : 6 7 8 12 13 14 15 46 57 58
factor               : 39 40 41 42 43 44
not_expr             : 25 26 27
or_expr              : 22 23
param_list           : 18 20
param_list_opt       : 16
program              : 0
simple_stmt          : 4
statement            : 3
stmt_list            : 1 3 21
term                 : 36 37 38 39 40 41

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . stmt_list
    (2) stmt_list -> .
    (3) stmt_list -> . stmt_list statement

    IDENT           reduce using rule 2 (stmt_list -> .)
    RETURN          reduce using rule 2 (stmt_list -> .)
    PASS            reduce using rule 2 (stmt_list -> .)
    PRINT           reduce using rule 2 (stmt_list -> .)
    IF              reduce using rule 2 (stmt_list -> .)
    WHILE           reduce using rule 2 (stmt_list -> .)
    FOR             reduce using rule 2 (stmt_list -> .)
    DEF             reduce using rule 2 (stmt_list -> .)
    NOT             reduce using rule 2 (stmt_list -> .)
    PLUS            reduce using rule 2 (stmt_list -> .)
    MINUS           reduce using rule 2 (stmt_list -> .)
    LPAREN          reduce using rule 2 (stmt_list -> .)
    INT             reduce using rule 2 (stmt_list -> .)
    FLOAT           reduce using rule 2 (stmt_list -> .)
    STRING          reduce using rule 2 (stmt_list -> .)
    TRUE            reduce using rule 2 (stmt_list -> .)
    FALSE           reduce using rule 2 (stmt_list -> .)
    NONE            reduce using rule 2 (stmt_list -> .)
    LBRACKET        reduce using rule 2 (stmt_list -> .)
    $end            reduce using rule 2 (stmt_list -> .)

    program                        shift and go to state 1
    stmt_list                      shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> stmt_list .
    (3) stmt_list -> stmt_list . statement
    (4) statement -> . simple_stmt SEMICOLON
    (5) statement -> . block_stmt
    (6) simple_stmt -> . expression
    (7) simple_stmt -> . IDENT ASSIGN expression
    (8) simple_stmt -> . RETURN expression
    (9) simple_stmt -> . RETURN
    (10) simple_stmt -> . PASS
    (11) simple_stmt -> . PRINT LPAREN arg_list_opt RPAREN
    (12) block_stmt -> . IF LPAREN expression RPAREN block
    (13) block_stmt -> . IF LPAREN expression RPAREN block ELSE block
    (14) block_stmt -> . WHILE LPAREN expression RPAREN block
    (15) block_stmt -> . FOR LPAREN IDENT IN expression RPAREN block
    (16) block_stmt -> . DEF IDENT LPAREN param_list_opt RPAREN block
    (22) expression -> . or_expr
    (23) or_expr -> . or_expr OR and_expr
    (24) or_expr -> . and_expr
    (25) and_expr -> . and_expr AND not_expr
    (26) and_expr -> . not_expr
    (27) not_expr -> . NOT not_expr
    (28) not_expr -> . comparison
    (29) comparison -> . arith_expr EQ arith_expr
    (30) comparison -> . arith_expr NEQ arith_expr
    (31) comparison -> . arith_expr LT arith_expr
    (32) comparison -> . arith_expr GT arith_expr
    (33) comparison -> . arith_expr LE arith_expr
    (34) comparison -> . arith_expr GE arith_expr
    (35) comparison -> . arith_expr
    (36) arith_expr -> . arith_expr PLUS term
    (37) arith_expr -> . arith_expr MINUS term
    (38) arith_expr -> . term
    (39) term -> . term TIMES factor
    (40) term -> . term DIVIDE factor
    (41) term -> . term MOD factor
    (42) term -> . factor
    (43) factor -> . PLUS factor
    (44) factor -> . MINUS factor
    (45) factor -> . atom
    (46) atom -> . LPAREN expression RPAREN
    (47) atom -> . INT
    (48) atom -> . FLOAT
    (49) atom -> . STRING
    (50) atom -> . TRUE
    (51) atom -> . FALSE
    (52) atom -> . NONE
    (53) atom -> . IDENT
    (54) atom -> . IDENT LPAREN arg_list_opt RPAREN
    (59) atom -> . LBRACKET arg_list_opt RBRACKET

    $end            reduce using rule 1 (program -> stmt_list .)
    IDENT           shift and go to state 7
    RETURN          shift and go to state 8
    PASS            shift and go to state 9
    PRINT           shift and go to state 10
    IF              shift and go to state 12
    WHILE           shift and go to state 13
    FOR             shift and go to state 14
    DEF             shift and go to state 15
    NOT             shift and go to state 19
    PLUS            shift and go to state 22
    MINUS           shift and go to state 24
    LPAREN          shift and go to state 11
    INT             shift and go to state 27
    FLOAT           shift and go to state 28
    STRING          shift and go to state 29
    TRUE            shift and go to state 30
    FALSE           shift and go to state 31
    NONE            shift and go to state 32
    LBRACKET        shift and go to state 33

    statement                      shift and go to state 3
    simple_stmt                    shift and go to state 4
    block_stmt                     shift and go to state 5
    expression                     shift and go to state 6
    or_expr                        shift and go to state 16
    and_expr                       shift and go to state 17
    not_expr                       shift and go to state 18
    comparison                     shift and go to state 20
    arith_expr                     shift and go to state 21
    term                           shift and go to state 23
    factor                         shift and go to state 25
    atom                           shift and go to state 26

state 3

    (3) stmt_list -> stmt_list statement .

    IDENT           reduce using rule 3 (stmt_list -> stmt_list statement .)
    RETURN          reduce using rule 3 (stmt_list -> stmt_list statement .)
    PASS            reduce using rule 3 (stmt_list -> stmt_list statement .)
    PRINT           reduce using rule 3 (stmt_list -> stmt_list statement .)
    IF              reduce using rule 3 (stmt_list -> stmt_list statement .)
    WHILE           reduce using rule 3 (stmt_list -> stmt_list statement .)
    FOR             reduce using rule 3 (stmt_list -> stmt_list statement .)
    DEF             reduce using rule 3 (stmt_list -> stmt_list statement .)
    NOT             reduce using rule 3 (stmt_list -> stmt_list statement .)
    PLUS            reduce using rule 3 (stmt_list -> stmt_list statement .)
    MINUS           reduce using rule 3 (stmt_list -> stmt_list statement .)
    LPAREN          reduce using rule 3 (stmt_list -> stmt_list statement .)
    INT             reduce using rule 3 (stmt_list -> stmt_list statement .)
    FLOAT           reduce using rule 3 (stmt_list -> stmt_list statement .)
    STRING          reduce using rule 3 (stmt_list -> stmt_list statement .)
    TRUE            reduce using rule 3 (stmt_list -> stmt_list statement .)
    FALSE           reduce using rule 3 (stmt_list -> stmt_list statement .)
    NONE            reduce using rule 3 (stmt_list -> stmt_list statement .)
    LBRACKET        reduce using rule 3 (stmt_list -> stmt_list statement .)
    $end            reduce using rule 3 (stmt_list -> stmt_list statement .)
    RBRACE          reduce using rule 3 (stmt_list -> stmt_list statement .)


state 4

    (4) statement -> simple_stmt . SEMICOLON

    SEMICOLON       shift and go to state 34


state 5

    (5) statement -> block_stmt .

    IDENT           reduce using rule 5 (statement -> block_stmt .)
    RETURN          reduce using rule 5 (statement -> block_stmt .)
    PASS            reduce using rule 5 (statement -> block_stmt .)
    PRINT           reduce using rule 5 (statement -> block_stmt .)
    IF              reduce using rule 5 (statement -> block_stmt .)
    WHILE           reduce using rule 5 (statement -> block_stmt .)
    FOR             reduce using rule 5 (statement -> block_stmt .)
    DEF             reduce using rule 5 (statement -> block_stmt .)
    NOT             reduce using rule 5 (statement -> block_stmt .)
    PLUS            reduce using rule 5 (statement -> block_stmt .)
    MINUS           reduce using rule 5 (statement -> block_stmt .)
    LPAREN          reduce using rule 5 (statement -> block_stmt .)
    INT             reduce using rule 5 (statement -> block_stmt .)
    FLOAT           reduce using rule 5 (statement -> block_stmt .)
    STRING          reduce using rule 5 (statement -> block_stmt .)
    TRUE            reduce using rule 5 (statement -> block_stmt .)
    FALSE           reduce using rule 5 (statement -> block_stmt .)
    NONE            reduce using rule 5 (statement -> block_stmt .)
    LBRACKET        reduce using rule 5 (statement -> block_stmt .)
    $end            reduce using rule 5 (statement -> block_stmt .)
    RBRACE          reduce using rule 5 (statement -> block_stmt .)


state 6

    (6) simple_stmt -> expression .

    SEMICOLON       reduce using rule 6 (simple_stmt -> expression .)


state 7

    (7) simple_stmt -> IDENT . ASSIGN expression
    (53) atom -> IDENT .
    (54) atom -> IDENT . LPAREN arg_list_opt RPAREN

    ASSIGN          shift and go to state 35
    TIMES           reduce using rule 53 (atom -> IDENT .)
    DIVIDE          reduce using rule 53 (atom -> IDENT .)
    MOD             reduce using rule 53 (atom -> IDENT .)
    EQ              reduce using rule 53 (atom -> IDENT .)
    NEQ             reduce using rule 53 (atom -> IDENT .)
    LT              reduce using rule 53 (atom -> IDENT .)
    GT              reduce using rule 53 (atom -> IDENT .)
    LE              reduce using rule 53 (atom -> IDENT .)
    GE              reduce using rule 53 (atom -> IDENT .)
    PLUS            reduce using rule 53 (atom -> IDENT .)
    MINUS           reduce using rule 53 (atom -> IDENT .)
    AND             reduce using rule 53 (atom -> IDENT .)
    OR              reduce using rule 53 (atom -> IDENT .)
    SEMICOLON       reduce using rule 53 (atom -> IDENT .)
    LPAREN          shift and go to state 36


state 8

    (8) simple_stmt -> RETURN . expression
    (9) simple_stmt -> RETURN .
    (22) expression -> . or_expr
    (23) or_expr -> . or_expr OR and_expr
    (24) or_expr -> . and_expr
    (25) and_expr -> . and_expr AND not_expr
    (26) and_expr -> . not_expr
    (27) not_expr -> . NOT not_expr
    (28) not_expr -> . comparison
    (29) comparison -> . arith_expr EQ arith_expr
    (30) comparison -> . arith_expr NEQ arith_expr
    (31) comparison -> . arith_expr LT arith_expr
    (32) comparison -> . arith_expr GT arith_expr
    (33) comparison -> . arith_expr LE arith_expr
    (34) comparison -> . arith_expr GE arith_expr
    (35) comparison -> . arith_expr
    (36) arith_expr -> . arith_expr PLUS term
    (37) arith_expr -> . arith_expr MINUS term
    (38) arith_expr -> . term
    (39) term -> . term TIMES factor
    (40) term -> . term DIVIDE factor
    (41) term -> . term MOD factor
    (42) term -> . factor
    (43) factor -> . PLUS factor
    (44) factor -> . MINUS factor
    (45) factor -> . atom
    (46) atom -> . LPAREN expression RPAREN
    (47) atom -> . INT
    (48) atom -> . FLOAT
    (49) atom -> . STRING
    (50) atom -> . TRUE
    (51) atom -> . FALSE
    (52) atom -> . NONE
    (53) atom -> . IDENT
    (54) atom -> . IDENT LPAREN arg_list_opt RPAREN
    (59) atom -> . LBRACKET arg_list_opt RBRACKET

    SEMICOLON       reduce using rule 9 (simple_stmt -> RETURN .)
    NOT             shift and go to state 19
    PLUS            shift and go to state 22
    MINUS           shift and go to state 24
    LPAREN          shift and go to state 11
    INT             shift and go to state 27
    FLOAT           shift and go to state 28
    STRING          shift and go to state 29
    TRUE            shift and go to state 30
    FALSE           shift and go to state 31
    NONE            shift and go to state 32
    IDENT           shift and go to state 38
    LBRACKET        shift and go to state 33

    expression                     shift and go to state 37
    or_expr                        shift and go to state 16
    and_expr                       shift and go to state 17
    not_expr                       shift and go to state 18
    comparison                     shift and go to state 20
    arith_expr                     shift and go to state 21
    term                           shift and go to state 23
    factor                         shift and go to state 25
    atom                           shift and go to state 26

state 9

    (10) simple_stmt -> PASS .

    SEMICOLON       reduce using rule 10 (simple_stmt -> PASS .)


state 10

    (11) simple_stmt -> PRINT . LPAREN arg_list_opt RPAREN

    LPAREN          shift and go to state 39


state 11

    (46) atom -> LPAREN . expression RPAREN
    (22) expression -> . or_expr
    (23) or_expr -> . or_expr OR and_expr
    (24) or_expr -> . and_expr
    (25) and_expr -> . and_expr AND not_expr
    (26) and_expr -> . not_expr
    (27) not_expr -> . NOT not_expr
    (28) not_expr -> . comparison
    (29) comparison -> . arith_expr EQ arith_expr
    (30) comparison -> . arith_expr NEQ arith_expr
    (31) comparison -> . arith_expr LT arith_expr
    (32) comparison -> . arith_expr GT arith_expr
    (33) comparison -> . arith_expr LE arith_expr
    (34) comparison -> . arith_expr GE arith_expr
    (35) comparison -> . arith_expr
    (36) arith_expr -> . arith_expr PLUS term
    (37) arith_expr -> . arith_expr MINUS term
    (38) arith_expr -> . term
    (39) term -> . term TIMES factor
    (40) term -> . term DIVIDE factor
    (41) term -> . term MOD factor
    (42) term -> . factor
    (43) factor -> . PLUS factor
    (44) factor -> . MINUS factor
    (45) factor -> . atom
    (46) atom -> . LPAREN expression RPAREN
    (47) atom -> . INT
    (48) atom -> . FLOAT
    (49) atom -> . STRING
    (50) atom -> . TRUE
    (51) atom -> . FALSE
    (52) atom -> . NONE
    (53) atom -> . IDENT
    (54) atom -> . IDENT LPAREN arg_list_opt RPAREN
    (59) atom -> . LBRACKET arg_list_opt RBRACKET

    NOT             shift and go to state 19
    PLUS            shift and go to state 22
    MINUS           shift and go to state 24
    LPAREN          shift and go to state 11
    INT             shift and go to state 27
    FLOAT           shift and go to state 28
    STRING          shift and go to state 29
    TRUE            shift and go to state 30
    FALSE           shift and go to state 31
    NONE            shift and go to state 32
    IDENT           shift and go to state 38
    LBRACKET        shift and go to state 33

    expression                     shift and go to state 40
    or_expr                        shift and go to state 16
    and_expr                       shift and go to state 17
    not_expr                       shift and go to state 18
    comparison                     shift and go to state 20
    arith_expr                     shift and go to state 21
    term                           shift and go to state 23
    factor                         shift and go to state 25
    atom                           shift and go to state 26

state 12

    (12) block_stmt -> IF . LPAREN expression RPAREN block
    (13) block_stmt -> IF . LPAREN expression RPAREN block ELSE block

    LPAREN          shift and go to state 41


state 13

    (14) block_stmt -> WHILE . LPAREN expression RPAREN block

    LPAREN          shift and go to state 42


state 14

    (15) block_stmt -> FOR . LPAREN IDENT IN expression RPAREN block

    LPAREN          shift and go to state 43


state 15

    (16) block_stmt -> DEF . IDENT LPAREN param_list_opt RPAREN block

    IDENT           shift and go to state 44


state 16

    (22) expression -> or_expr .
    (23) or_expr -> or_expr . OR and_expr

    SEMICOLON       reduce using rule 22 (expression -> or_expr .)
    RPAREN          reduce using rule 22 (expression -> or_expr .)
    COMMA           reduce using rule 22 (expression -> or_expr .)
    RBRACKET        reduce using rule 22 (expression -> or_expr .)
    OR              shift and go to state 45


state 17

    (24) or_expr -> and_expr .
    (25) and_expr -> and_expr . AND not_expr

    OR              reduce using rule 24 (or_expr -> and_expr .)
    SEMICOLON       reduce using rule 24 (or_expr -> and_expr .)
    RPAREN          reduce using rule 24 (or_expr -> and_expr .)
    COMMA           reduce using rule 24 (or_expr -> and_expr .)
    RBRACKET        reduce using rule 24 (or_expr -> and_expr .)
    AND             shift and go to state 46


state 18

    (26) and_expr -> not_expr .

    AND             reduce using rule 26 (and_expr -> not_expr .)
    OR              reduce using rule 26 (and_expr -> not_expr .)
    SEMICOLON       reduce using rule 26 (and_expr -> not_expr .)
    RPAREN          reduce using rule 26 (and_expr -> not_expr .)
    COMMA           reduce using rule 26 (and_expr -> not_expr .)
    RBRACKET        reduce using rule 26 (and_expr -> not_expr .)


state 19

    (27) not_expr -> NOT . not_expr
    (27) not_expr -> . NOT not_expr
    (28) not_expr -> . comparison
    (29) comparison -> . arith_expr EQ arith_expr
    (30) comparison -> . arith_expr NEQ arith_expr
    (31) comparison -> . arith_expr LT arith_expr
    (32) comparison -> . arith_expr GT arith_expr
    (33) comparison -> . arith_expr LE arith_expr
    (34) comparison -> . arith_expr GE arith_expr
    (35) comparison -> . arith_expr
    (36) arith_expr -> . arith_expr PLUS term
    (37) arith_expr -> . arith_expr MINUS term
    (38) arith_expr -> . term
    (39) term -> . term TIMES factor
    (40) term -> . term DIVIDE factor
    (41) term -> . term MOD factor
    (42) term -> . factor
    (43) factor -> . PLUS factor
    (44) factor -> . MINUS factor
    (45) factor -> . atom
    (46) atom -> . LPAREN expression RPAREN
    (47) atom -> . INT
    (48) atom -> . FLOAT
    (49) atom -> . STRING
    (50) atom -> . TRUE
    (51) atom -> . FALSE
    (52) atom -> . NONE
    (53) atom -> . IDENT
    (54) atom -> . IDENT LPAREN arg_list_opt RPAREN
    (59) atom -> . LBRACKET arg_list_opt RBRACKET

    NOT             shift and go to state 19
    PLUS            shift and go to state 22
    MINUS           shift and go to state 24
    LPAREN          shift and go to state 11
    INT             shift and go to state 27
    FLOAT           shift and go to state 28
    STRING          shift and go to state 29
    TRUE            shift and go to state 30
    FALSE           shift and go to state 31
    NONE            shift and go to state 32
    IDENT           shift and go to state 38
    LBRACKET        shift and go to state 33

    not_expr                       shift and go to state 47
    comparison                     shift and go to state 20
    arith_expr                     shift and go to state 21
    term                           shift and go to state 23
    factor                         shift and go to state 25
    atom                           shift and go to state 26

state 20

    (28) not_expr -> comparison .

    AND             reduce using rule 28 (not_expr -> comparison .)
    OR              reduce using rule 28 (not_expr -> comparison .)
    SEMICOLON       reduce using rule 28 (not_expr -> comparison .)
    RPAREN          reduce using rule 28 (not_expr -> comparison .)
    COMMA           reduce using rule 28 (not_expr -> comparison .)
    RBRACKET        reduce using rule 28 (not_expr -> comparison .)


state 21

    (29) comparison -> arith_expr . EQ arith_expr
    (30) comparison -> arith_expr . NEQ arith_expr
    (31) comparison -> arith_expr . LT arith_expr
    (32) comparison -> arith_expr . GT arith_expr
    (33) comparison -> arith_expr . LE arith_expr
    (34) comparison -> arith_expr . GE arith_expr
    (35) comparison -> arith_expr .
    (36) arith_expr -> arith_expr . PLUS term
    (37) arith_expr -> arith_expr . MINUS term

    EQ              shift and go to state 48
    NEQ             shift and go to state 49
    LT              shift and go to state 50
    GT              shift and go to state 51
    LE              shift and go to state 52
    GE              shift and go to state 53
    AND             reduce using rule 35 (comparison -> arith_expr .)
    OR              reduce using rule 35 (comparison -> arith_expr .)
    SEMICOLON       reduce using rule 35 (comparison -> arith_expr .)
    RPAREN          reduce using rule 35 (comparison -> arith_expr .)
    COMMA           reduce using rule 35 (comparison -> arith_expr .)
    RBRACKET        reduce using rule 35 (comparison -> arith_expr .)
    PLUS            shift and go to state 54
    MINUS           shift and go to state 55


state 22

    (43) factor -> PLUS . factor
    (43) factor -> . PLUS factor
    (44) factor -> . MINUS factor
    (45) factor -> . atom
    (46) atom -> . LPAREN expression RPAREN
    (47) atom -> . INT
    (48) atom -> . FLOAT
    (49) atom -> . STRING
    (50) atom -> . TRUE
    (51) atom -> . FALSE
    (52) atom -> . NONE
    (53) atom -> . IDENT
    (54) atom -> . IDENT LPAREN arg_list_opt RPAREN
    (59) atom -> . LBRACKET arg_list_opt RBRACKET

    PLUS            shift and go to state 22
    MINUS           shift and go to state 24
    LPAREN          shift and go to state 11
    INT             shift and go to state 27
    FLOAT           shift and go to state 28
    STRING          shift and go to state 29
    TRUE            shift and go to state 30
    FALSE           shift and go to state 31
    NONE            shift and go to state 32
    IDENT           shift and go to state 38
    LBRACKET        shift and go to state 33

    factor                         shift and go to state 56
    atom                           shift and go to state 26

state 23

    (38) arith_expr -> term .
    (39) term -> term . TIMES factor
    (40) term -> term . DIVIDE factor
    (41) term -> term . MOD factor

    EQ              reduce using rule 38 (arith_expr -> term .)
    NEQ             reduce using rule 38 (arith_expr -> term .)
    LT              reduce using rule 38 (arith_expr -> term .)
    GT              reduce using rule 38 (arith_expr -> term .)
    LE              reduce using rule 38 (arith_expr -> term .)
    GE              reduce using rule 38 (arith_expr -> term .)
    PLUS            reduce using rule 38 (arith_expr -> term .)
    MINUS           reduce using rule 38 (arith_expr -> term .)
    AND             reduce using rule 38 (arith_expr -> term .)
    OR              reduce using rule 38 (arith_expr -> term .)
    SEMICOLON       reduce using rule 38 (arith_expr -> term .)
    RPAREN          reduce using rule 38 (arith_expr -> term .)
    COMMA           reduce using rule 38 (arith_expr -> term .)
    RBRACKET        reduce using rule 38 (arith_expr -> term .)
    TIMES           shift and go to state 57
    DIVIDE          shift and go to state 58
    MOD             shift and go to state 59


state 24

    (44) factor -> MINUS . factor
    (43) factor -> . PLUS factor
    (44) factor -> . MINUS factor
    (45) factor -> . atom
    (46) atom -> . LPAREN expression RPAREN
    (47) atom -> . INT
    (48) atom -> . FLOAT
    (49) atom -> . STRING
    (50) atom -> . TRUE
    (51) atom -> . FALSE
    (52) atom -> . NONE
    (53) atom -> . IDENT
    (54) atom -> . IDENT LPAREN arg_list_opt RPAREN
    (59) atom -> . LBRACKET arg_list_opt RBRACKET
